<resources>
    <string name="app_name">ProjectBinaryVeda</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_skill_set">SKILL SET</string>
    <string name="tab_work_function">WORK FUNCTION</string>
    <string name="tab_industry">INDUSTRY</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="qualification">Qualification</string>
    <string name="work_experience">Work Experience</string>
    <string name="expected_ctc">Expected CTC</string>
    <string name="currently_working">Currently Working</string>
    <string name="designation">Designation</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
</resources>
