<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/name"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amit Vora" />

        <TextView
            android:id="@+id/designation"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:text="Senior Software Developer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/loc" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginStart="@dimen/margin_8dp"
                android:text="Malabar Hill" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/qualification" />

                    <TextView
                        android:textSize="@dimen/textsize_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="B Tech"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:textSize="@dimen/textsize_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/qualification"
                        android:textAlignment="center" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/work_experience" />

                    <TextView
                        android:textSize="@dimen/textsize_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10 years"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:textSize="@dimen/textsize_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_experience"
                        android:textAlignment="center" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/expected_ctc" />

                    <TextView
                        android:textSize="@dimen/textsize_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="B Tech"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:textSize="@dimen/textsize_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expected_ctc"
                        android:textAlignment="center" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="vertical"
                android:background="@color/back_grey"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:textSize="@dimen/textsize_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currently_working"
                    android:textAlignment="center" />

                <TextView
                    android:textSize="@dimen/textsize_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Currently Working"
                    android:textAlignment="center" />

                <View
                    android:background="@color/line_grey"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:background="@color/back_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:textSize="@dimen/textsize_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"
                    android:textAlignment="center" />

                <TextView
                    android:textSize="@dimen/textsize_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Currently Working"
                    android:textAlignment="center" />

            </LinearLayout>


            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:textSize="@dimen/textsize_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:tabSelectedTextColor="@color/circleBlue"
                app:tabTextColor="@android:color/tertiary_text_light">

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_skill_set" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_work_function" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_industry" />

            </android.support.design.widget.TabLayout>

            <TextView
                android:textSize="@dimen/textsize_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_8dp"
                android:background="@color/back_grey"
                android:text="Adobe photoshop | Sketch | Adobe Illustrator |
            Indesign"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="283dp"
        android:layout_height="106dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:background="@drawable/cirlce_background_white"
                android:src="@drawable/fill_1" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/cirlce_background_blue"
                android:src="@drawable/cancel" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/cirlce_background_white"
                android:src="@drawable/accept" />

        </RelativeLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>